--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,4 +1,4 @@
-.Button{
+.ButtonCarica{
     display: block;
     width: 100%;
     max-width: 200px;
@@ -7,14 +7,14 @@
     border-radius: 10px;
     margin: 10px;
 }
-.Button:hover{
+.ButtonCarica.hover{
     
 }
 
-.Button.variantCarica{
+.ButtonCarica.mouseOn{
 
 }
 
-.Button.variantCopia{
+.ButtonCopia.disabled{
 
 }
